# iskobrEngine

./: .gitignore  ABOUT.md  CMakeLists.txt  README.md  _config.yml  main.cpp
assets/: entities.json  entitiesTemplates.md  tilesets.json
assets/maps/: level.json  level1.txt  level1Water.txt
docs/: ABOUT.md  EntitiesExample.md  _config.yml  about.md  index.md  recentAdditions.md
docs/css/: style.css  style.scss
include/Engine/: ComponentManager.h  Engine.h  EntityManager.h  InputManager.h  MovementSystem.h  RenderSystem.h  System.h  SystemManager.h  TilesetManager.h
include/Engine/Components/: AIComponent.h  ActorComponent.h  AnimationComponent.h  AttackColliderComponent.h  ColliderComponent.h  DirectionComponent.h  EmitterComponent.h  HealthComponent.h  KnockBackComponent.h  MovementIntent.h  NavigationComponent.h  PathComponent.h  PatrolComponent.h  PhysicsBody.h  PlayerComponent.h  Position.h  ProjectileComponent.h  SeekComponent.h  SpriteComponent.h  TileComponent.h  Transform.h  Velocity.h  WallClingComponent.h
include/Engine/Core/: EntityFactory.h  TileCoord.h  TileType.h  UpdateContext.h  mapGenerator.cpp
include/Engine/Systems/: AIStateSystem.h  AISystem.h  ActorSystem.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.h  DamageSystem.h  EmitterSystem.h  GroundResetSystem.h  KnockBackSystem.h  MovementSystem.h  NavigationCommandSystem.h  ParticleGenSystem.h  ParticleSystem.h  PathFollowingSystem.h  PathfindingSystem.h  PhysicsSystem.h  PlayerInputSystem.h  ProjectileSystem.h  RenderSystem.h  TileMapSystem.h  TriggerSystem.h
include/Engine/Systems/ParticleSystem/: FluidParticleSystem.h  GaseousParticleSystem.h  HomingParticleSystem.h  ParticleSystemBase.h  StaticFluidParticleSystem.h
logs/: system_registry.txt
src/Editor/: main_editor.cpp
src/Engine/: Engine.cpp  EntityManager.cpp  InputManager.cpp
